<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/pingreen"
            android:id="@+id/image_01"
            android:layout_width="16dip"
            android:layout_height="20dip"
            android:scaleType="fitXY"
            ></ImageView>
        <TextView
            android:text="@string/stockmap_info_stockexists"
            android:textSize="10dip"
            android:textColor="#000000"
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true" ></TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/pinred"
            android:id="@+id/image_01"
            android:layout_width="16dip"
            android:layout_height="20dip"
            android:scaleType="fitXY"
            ></ImageView>
        <TextView
            android:text="@string/stockmap_info_stocknone"
            android:textSize="10dip"
            android:textColor="#000000"
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true" ></TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/pingray"
            android:id="@+id/image_01"
            android:layout_width="16dip"
            android:layout_height="20dip"
            android:scaleType="fitXY"
            ></ImageView>
        <TextView
            android:text="@string/stockmap_info_stockno"
            android:textSize="10dip"
            android:textColor="#000000"
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true" ></TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/pinpurple"
            android:id="@+id/image_01"
            android:layout_width="16dip"
            android:layout_height="20dip"
            android:scaleType="fitXY"
            ></ImageView>
        <TextView
            android:text="@string/stockmap_info_searching"
            android:textSize="10dip"
            android:textColor="#000000"
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true" ></TextView>
    </LinearLayout>
</LinearLayout>